# app/Models/Tag.php
@@ -4,7 +4,47 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\SoftDeletes;
-
+/**
+ * @OA\Schema(
+ *     schema="Tag",
+ *     type="object",
+ *     title="Tag",
+ *     description="Tag model",
+ *     @OA\Property(
+ *         property="id",
+ *         type="integer",
+ *         description="ID of the tag"
+ *     ),
+ *     @OA\Property(
+ *         property="name",
+ *         type="string",
+ *         description="Name of the tag"
+ *     ),
+ *     @OA\Property(
+ *         property="status",
+ *         type="string",
+ *         description="Status of the tag"
+ *     ),
+ *     @OA\Property(
+ *         property="created_at",
+ *         type="string",
+ *         format="date-time",
+ *         description="Creation timestamp"
+ *     ),
+ *     @OA\Property(
+ *         property="updated_at",
+ *         type="string",
+ *         format="date-time",
+ *         description="Update timestamp"
+ *     ),
+ *     @OA\Property(
+ *         property="deleted_at",
+ *         type="string",
+ *         format="date-time",
+ *         description="Deletion timestamp"
+ *     )
+ * )
+ */
 class Tag extends Model
 {
     use SoftDeletes;
